--- a/template/html/kegg_minpath_summary.html
+++ b/template/html/kegg_minpath_summary.html
@@ -13,8 +13,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script type="text/javascript"  src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script type="text/javascript"  src="https://cdn.datatables.net/fixedcolumns/3.2.6/js/dataTables.fixedColumns.min.js"></script>
-  <script type="text/javascript" src="../data/cds.gene2ko.minpath.datatable.json"></script>
-  <script type="text/javascript" src="../data/cds.gene2ko.minpath.tablecol.json"></script>
+  <script type="text/javascript" src="../data/kegg.cds.profile.datatable.json"></script>
+  
   <script type="text/javascript" class="init">
 
     $(document).ready(function() {
@@ -44,8 +44,8 @@
     <nav class="site-header py-0 mb-5">
       <div class="container d-flex justify-content-end">
 	<a class="pl-4 d-none d-md-inline-block" href="../index.html">Home</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">About</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">Help</a>
+	
+	<a class="pl-4 d-none d-md-inline-block" href="../help.html">Help</a>
       </div>
     </nav>
     
@@ -62,7 +62,7 @@
     <footer>
       <div class="col-xs-12 mt-5">
 	<p class="text-center" >Problems? Questions? Suggestions? Please contact  <a href="mailto:xdong@ucalgary.ca">Xiaoli Dong</a> or <a href="mailto:mstrous@ucalgary.ca">Marc Strous</a></p>
-	<p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a</p>
+	<p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a></p>
 																													  </div>
     </footer>
     
