--- a/template/html/protein_family_tigrfam.html
+++ b/template/html/protein_family_tigrfam.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>protein family distribution: TIGRFAMS</title>
+  <title>protein family profile: TIGRFAMS</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="../style.css">
@@ -11,8 +11,7 @@
   <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript"  src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script type="text/javascript"  src="../js/dataTables.fixedColumns.min.js"></script>
-  <script type="text/javascript" src="../data/cds.tigrfam2genes.datatable.json"></script>
-  <script type="text/javascript" src="../data/cds.tigrfam2genes.tablecol.json"></script>
+  <script type="text/javascript" src="../data/tigrfam.cds.profile.datatable.json"></script>
   <script type="text/javascript" class="init">
     
     $(document).ready(function() {
@@ -40,15 +39,15 @@
     <nav class="site-header py-0 mb-5">
       <div class="container d-flex justify-content-end">
 	<a class="pl-4 d-none d-md-inline-block" href="../index.html">Home</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">About</a>
-	<a class="pl-4 d-none d-md-inline-block" href="#">Help</a>
+	
+	<a class="pl-4 d-none d-md-inline-block" href="../help.html">Help</a>
       </div>
     </nav>
 
   
     <div class="content">
       <h2 style="text-align:center;">Protein family distribution: TIGRFAMS</h2>
-      <table id="genetable" class="stripe row-border order-column" cellspacing="0" width="100%">
+      <table id="genetable" class="stripe row-border order-column cell-border" style="width: 100%; word-wrap:break-word;table-layout: fixed;">
 	<thead>
 	 
 	</thead>
@@ -64,7 +63,7 @@
   <div class="col-xs-12 mt-5">
     <!--Footer Bottom-->
     <p class="text-center" >Problems? Questions? Suggestions? Please contact  <a href="mailto:xdong@ucalgary.ca">Xiaoli Dong</a> or <a href="mailto:mstrous@ucalgary.ca">Marc Strous</a></p>
-    <p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a</p>
+    <p class="text-center"><a href="http://www.ucalgary.ca/ebg/">Energy Bioengineering Group</a> in <a href="http://geoscience.ucalgary.ca/">Department of Geoscience</a> at <a href="http://www.ucalgary.ca">Univeristy of Calgary</a></p>
 																												      </div>
 </footer>
 </div>
